# moneylang

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE.bazel  bazel-bin  bazel-moneylang  bazel-out  bazel-testlogs  run_tests.sh
app/: BUILD.bazel  MoneyLang.kt
app/context/: MoneyLangContext.kt  MoneyLangInputJson.kt
app/dsl/: MoneyLangDsl.kt
app/processor/: Destination.kt  DestinationBuilder.kt  Posting.kt  Transaction.kt  TransactionFlow.kt  TransactionProcessor.kt
app/results/: TransactionResults.kt
app/stages/: ConditionStageSetupBuilder.kt  GivenStageSetupBuilder.kt  SendStageBuilder.kt
app/test/: BUILD.bazel
app/test/dsl/: MoneyLangDslTest.kt
app/test/integration/: MoneyLangIntegrationTest.kt
app/test/processor/: TransactionFlowTest.kt
app/utils/: Account.kt  Allocation.kt  AppliedTag.kt  CurrencyAmount.kt  Exact.kt  ExactAdd.kt  ExactDiv.kt  ExactMinus.kt  ExactTimes.kt  MaxAmount.kt  Metadata.kt  MinAmount.kt  Percentage.kt  PercentageAdd.kt  PercentageCap.kt  PercentageDiv.kt  PercentageMinus.kt  PercentageTimes.kt  Remaining.kt  Variable.kt
