load("@rules_kotlin//kotlin:lint.bzl", "ktlint_config")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "editorconfig",
    srcs = [".editorconfig"],
)

ktlint_config(
    name = "ktlint_editorconfig",
    android_rules_enabled = False,
    editorconfig = "//:editorconfig",
    experimental_rules_enabled = False,
    visibility = ["//visibility:public"],
)
