load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "moneylang_dsl_tests",
    srcs = ["dsl/MoneyLangDslTest.kt"],
    test_class = "moneylang.dsl.MoneyLangDslTest",
    deps = [
        "//app:app_lib",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "moneylang_integration_tests",
    srcs = ["integration/MoneyLangIntegrationTest.kt"],
    test_class = "moneylang.integration.MoneyLangIntegrationTest",
    deps = [
        "//app:app_lib",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

kt_jvm_test(
    name = "moneylang_processor_tests",
    srcs = ["processor/TransactionFlowTest.kt"],
    test_class = "moneylang.processor.TransactionFlowTest",
    deps = [
        "//app:app_lib",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit",
    ],
)

test_suite(
    name = "all_tests",
    tests = [
        ":moneylang_dsl_tests",
        ":moneylang_integration_tests",
        ":moneylang_processor_tests",
    ],
)
